client/src/App.css
/* ... */
.upload-page__upload-form-contents-input-for-click {
  opacity: 0;
  font-size: 0px;
  cursor: pointer;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  border-radius: 4px;
  z-index: 999;
  background-color: rgb(255, 0, 0);
}
.upload-page__add-upload-button-button {
  z-index: 10;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-around;
  background-color: rgb(60, 113, 226);
  color: #fff;
  cursor: pointer;
  border-radius: 6px;
  padding: 0.5rem 1.5rem;
  font-size: 1rem;
  font-weight: 500;
  width: 100%;
  height: 100%;
}

.upload-page__upload-form-contents-input-for-click:hover
  .upload-page__add-upload-button {
  background-color: rgb(53, 101, 204);
  transition: 0.1s ease;
}

.upload-page__upload-form-caption {
  margin-top: 65px;
  /* margin-bottom: 1rem; */
  font-weight: 400;
  opacity: 0.5;
  text-align: center;
}
.upload-page__trash-icon {
  color: #fff;
  font-size: 4rem;
  margin-right: 1rem;
  transition: color 0.3s;
  cursor: pointer;
}
.upload-page__trash-icon:hover {
  color: var(--dark5);
  transition: 0.3s;
}
.upload-page__uploading-icon {
  margin-right: 1rem;
}

.removeUploadIcon {
  cursor: pointer;
  color: red;
}

.removeUploadIcon:hover {
  color: rgb(182, 32, 32);
}

.removeUploadIconSVG {
  pointer-events: none;
}

.upload-page__file-list {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-top: 0.9rem;
}

.upload-page__image-item {
  margin: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--offWhite);
  color: var(--dark2);
  width: 85%;
  max-width: var(--siteContentsLeastWidth);
  height: 300px;
  font-size: 1.8rem;
  font-weight: 500;
  /* height: 120px; */
  padding: 2rem;
  border-radius: 20px;
  animation: fadeIn 0.4s;
}
.upload-page__image-item-div {
  width: 300px;
  height: 280px;
  background-color: #e9e9e9;
}
.upload-page__image-item-title {
  -ms-word-break: break-all;
  word-break: break-all;
  padding: 0rem 1.25rem;
}
.upload-page__image-item-title-skeleton-loading {
  flex-grow: 1;
  max-width: 400px;
  height: 3rem;
  border-radius: 10px;
  background-color: #e9e9e9;
  margin: 0 1.75rem;
}

.upload-page__image-item img {
  width: 100%;
  max-width: 300px;
  max-height: 280px;
  object-fit: contain;
}
@media (width < 900px) {
  .upload-page__image-item {
    height: 150px;
    max-width: 900px;
    padding: 2rem 0.25rem;
  }
  .upload-page__image-item img {
    max-width: 150px;
    max-height: 130px;
    margin-left: 0.5rem;
  }
  .upload-page__image-item-div {
    width: 150px;
    height: 130px;
    margin-left: 0.5rem;
  }
  .upload-page__trash-icon {
    font-size: 2rem;
  }
}
@media (width < 650px) {
  .upload-page__image-item {
    height: 120px;
    font-size: 1rem;
    max-width: 650px;
  }
  .upload-page__image-item img {
    max-width: 75px;
    max-height: 90px;
    margin-left: 0.5rem;
  }
  .upload-page__image-item-div {
    width: 75px;
    height: 90px;
    margin-left: 0.5rem;
  }
  .upload-page__trash-icon {
    font-size: 1rem;
    margin-right: 1rem;
  }
}
.upload-page__image-item-error-helper {
  background-color: rgb(176, 66, 66);
  color: white;
  font-weight: 400;
  border-radius: 1px;
  height: 200px;
  padding-left: 2.7rem;
}
.upload-page__image-item-error-x-icon {
  margin-right: 1rem;
  font-size: 3rem;
  cursor: pointer;
  color: red;
}
.upload-page__upload-form-side-bar-container {
  width: 100%;
  max-width: var(--siteContentsMidWidth);
  position: fixed;
  display: flex;
  justify-content: flex-start;
}
.upload-page__upload-form-side-bar-contents {
  position: absolute;
  left: -28px;
  top: 115px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.7rem;
}
.upload-page__upload-form-side-bar-container button {
  /* border-radius: 50%; */
  border: 3px solid rgb(58, 132, 230);
  /* border: 6px solid var(--greyBorder1); */
  width: 25px;
  height: 25px;
  font-size: 1rem;
  margin-left: 1.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(58, 132, 230);
}
.upload-page__upload-form-side-bar-add-icon {
  color: var(--offWhite);
  font-size: 1rem;
}
.upload-page__upload-form-side-bar-container a {
  border-radius: 12px;
  width: 80px;
  height: 80px;
  background-color: var(--greyBorder1);
}
.upload-page__upload-form-side-bar-container a img {
  width: 100%;
  height: 100%;
  border-radius: 12px;
  object-fit: cover;
}
.upload-page__upload-form-side-bar-container a:focus {
  border-radius: 12px;
  border: 3px solid #fff;
  outline: 4px solid green;
  width: 85px;
  height: 85px;
  background-color: var(--greyBorder1);
}
/* .upload-page__upload-form-side-bar-container button img:focus {
  border: 2px solid green;
} */

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.dragOverCSS {
  background-color: rgb(205, 220, 252);
  border: 6px dashed rgb(55, 137, 209);
}
.upload-page__all-done-banner-container {
  z-index: 999;
  position: sticky;
  bottom: 0px;
  width: 100%;
  padding: 0.75rem 0;
  margin-top: 0.7rem;
  background-color: rgb(229, 238, 226);
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1rem;
  font-weight: 700;
  box-shadow: 0px -10px 15px -9px rgb(196, 196, 196);
}
.upload-page__all-done-banner-browse-button-container {
  width: 100%;
  max-width: var(--siteContentsMidWidth);
  height: auto;
  padding: 0;
  margin: auto;
  position: absolute;
  top: -30px;
  font-size: 1.25rem;
  /* padding-left: var(--sideSpacePadding); */
}
.upload-page__all-done-banner-upload-input {
  opacity: 0;
  font-size: 0px;
  cursor: pointer;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 87px;
  height: 100%;
  z-index: 999;
  background-color: rgb(89, 56, 56);
}
/* ... */

